Añado segunda línea del resumen del libro siete

--- a/lp06.md
+++ b/lp06.md
@@ -1,2 +1,2 @@
-#Larry Plotter y El Misterio del Hacker
+#Larry Plotter y El Misterio del Hacker (Ballmermort)
 **Larry** descubre un libro de ensamblador y compiladores que pertence a un misterioso *hacker*.
