--- a/lp07.md
+++ b/lp07.md
@@ -1,3 +1,6 @@
 # Larry Plotter y Los Commits de la Muerte
 
-**Larry**, **ROM** y **Versión** se lanzan a la búsqueda de los *exploits* que **Ballmermort** necesita para sobrevivir.
+**Larry**, **ROM** y **Versión** se lanzan a la búsqueda de los *exploits* que 
+**Ballmermort** necesita para sobrevivir.
+Destruyendo todos los *exploits* vencerán a **Ballmermort**.
+Pero el camino no será fácil porque sus portátiles no tienen mucha batería.
