--- a/lp07.md
+++ b/lp07.md
@@ -4,3 +4,6 @@
 **Ballmermort** necesita para sobrevivir.
 Destruyendo todos los *exploits* vencerán a **Ballmermort**.
 Pero el camino no será fácil porque sus portátiles no tienen mucha batería.
+
+**Larry** deberá usar todos los conocimientos que ha adquirido para 
+poder entregar el producto sin *malware*
